--- a/run/Dockerfile_selfbuild
+++ b/run/Dockerfile_selfbuild
@@ -15,11 +15,11 @@ RUN apt-get update \
 		libqt5sql5-sqlite \
 		openssl
 WORKDIR /app
-COPY --from=builder /app/mumble/build/mumble-server .
+COPY --from=builder /app/mumble/build/mumble-server ./mumble-server
 EXPOSE 64738/tcp
 EXPOSE 64738/udp
-RUN useradd -p $(openssl passwd -1 murmur) murmur
-RUN chown -R murmur:murmur /app
-USER murmur
+RUN useradd -p $(openssl passwd -1 mumble-server) mumble-server
+RUN chown -R mumble-server:mumble-server /app
+USER mumble-server
 ENV SUPW=YOUR_PASSWORD
-CMD touch murmur.sqlite && (murmurd -ini /app/murmur.ini -supw $SUPW; exit 0) && murmurd -ini /app/murmur.ini
+ENTRYPOINT touch mumble-server.sqlite && (./mumble-server -fg -ini /app/mumble-server.ini -supw $SUPW; exit 0) && ./mumble-server -fg -ini /app/mumble-server.ini
