--- a/run/Dockerfile_selfbuild_with_java
+++ b/run/Dockerfile_selfbuild_with_java
@@ -5,4 +5,4 @@ USER root
 RUN apt-get update \
         && DEBIAN_FRONTENTD="noninteractive" apt-get install -y --no-install-recommends \
 		openjdk-8-jre-headless
-USER murmur
+USER mumble-server
