Enabled grpc and disable other things in selfbuild

--- a/builder/Dockerfile
+++ b/builder/Dockerfile
@@ -62,5 +62,5 @@ WORKDIR /app
 RUN git clone https://github.com/epnw/mumble -b ssl-improvments-upstream
 WORKDIR /app/mumble/build
 RUN sed -i 's/include(FindPythonInterpreter)/include(FindPythonInterp)/g' /app/mumble/cmake/qt-utils.cmake 
-RUN cmake -Dclient=OFF ..
+RUN cmake -Dclient=OFF -Dgrpc=ON -Dice=OFF -Dzeroconf=OFF -Ddbus=OFF ..
 RUN make -j4
