Added files for static build

--- a/builder/Dockerfile_gdb
+++ b/builder/Dockerfile_gdb
@@ -63,5 +63,5 @@ RUN git clone https://github.com/epnw/mumble -b ssl-improvments-upstream
 WORKDIR /app/mumble/build
 RUN git submodule update --init
 #RUN sed -i 's/include(FindPythonInterpreter)/include(FindPythonInterp)/g' /app/mumble/cmake/qt-utils.cmake 
-RUN cmake -Dclient=OFF -Dgrpc=ON ..
+RUN cmake -Dclient=OFF -Dgrpc=ON -Dsymbols=ON ..
 RUN make -j4
