--- a/builder/Dockerfile_static
+++ b/builder/Dockerfile_static
@@ -80,7 +80,11 @@ RUN sed -i 's/CaCertificate(qlMcts)/CaCertificates(qlMcts)/g' /app/mumble/src/mu
 RUN sed -i 's/QString::SplitBehavior/Qt/g' /app/mumble/src/murmur/Server.cpp
 WORKDIR /app/mumble
 RUN git submodule update --init
+# Use old dependencies from 2021
+RUN sed -i 's|git clone https://github.com/Microsoft/vcpkg.git $VCPKGDIR|git clone https://github.com/Microsoft/vcpkg.git $VCPKGDIR --branch 2021.12.01|' ./scripts/vcpkg/get_mumble_dependencies.sh
+RUN sed -i 's|REF 3.7|REF a9d68a8d1d884b839f871c46b4ea94b3fc6d6527|' ./helpers/vcpkg/ports/zeroc-ice/portfile.cmake
+RUN sed -i 's|SHA512 9f44de4e063d7a7b6a2b4adbae999fe3a6daafb8a7e945b616f89a453db81c41d1fec927f3149862649e5a92623c50f0ef2e0e58042c6070059b78dcf5ad9255|SHA512 c3d6ccf579b5e726e1f08ee8e8cbd7a0f175326b9538a9420f7c0ed1ee075d658ba9b72eee3b19f1c8da33b8c39681b9d0ee63fdbeccd03e6a95c18a73c4fcaf|' ./helpers/vcpkg/ports/zeroc-ice/portfile.cmake
 RUN ./scripts/vcpkg/get_mumble_dependencies.sh
 WORKDIR /app/mumble/build
 RUN cmake "-DVCPKG_TARGET_TRIPLET=x64-linux" "-Dstatic=ON" "-DCMAKE_TOOLCHAIN_FILE=/root/vcpkg/scripts/buildsystems/vcpkg.cmake" "-Dice=OFF" "-DCMAKE_BUILD_TYPE=Release" cmake "-Dclient=OFF" "-Dgrpc=ON" ..
-RUN make -j4
+RUN make -j12
